# cardio-forecaster

./: .gitignore  LICENSE  NOTES.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py
backend/app/data/: mimic_loader.py  preprocessing.py  synthetic.py
backend/app/inference/: predictor.py
backend/app/models/: __init__.py  lstm.py  transformer.py
backend/app/utils/: schemas.py
backend/tests/: test_api.py  test_data.py  test_model.py
docs/: architecture.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ForecastChart.jsx  PatientHeader.jsx  RiskIndicator.jsx  VitalsMonitor.jsx
frontend/src/hooks/: useLiveVitals.js
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb
training/: config.yaml  evaluate.py  train.py
